--- a/Donbass_X.html
+++ b/Donbass_X.html
@@ -10,8 +10,8 @@
         <header class="header">
             <nav class="navbar">
                 <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
-                <a style="padding: 4px;">DonBass</a>
-                <a style="padding: 4px;">DonBass Air</a>
+                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Товары</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
@@ -28,6 +28,9 @@
 
             <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
                 <p style="text-align: center;"><img src="images/DonbassXFridge.png" style="width: 80%;"></p>
+                <button class="button-color" style="background-color: white;"></button>
+                <button class="button-color" style="background-color: black;"></button>
+                <button class="button-color" style="background-color: grey;"></button>
                 <p><img src="images/Xamarin.png" style="width: 30%;">
                 <br><b>DonBass X</b><br><br>
                 <b>240V<br>
@@ -40,7 +43,17 @@
                 Уровень шума: 50 дБ<br>
                 Тип: однокамерный<br>
                 </p>
-                <button class="button button4">Выбрать</button>
+                <p><b>$1999.00</b></p>
+                <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                <p><b>$91.6/м. за 2 года</b></p>
+                <hr>
+                <p class="info">
+                    <b>Coal Trade In</b>
+                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                    заняться переработкой устройств<br><br>
+                </p>
+                <a href="Donbass.html"><button class="button button4">Выбрать</button></a>
             </div>
             <div class="Span6 product_field" style="font-size: 80%;">
                 <p style="text-align: center;"><img src="images/DonbassXFridgeRed.png" style="width: 80%;"></p>
@@ -55,7 +68,17 @@
                     Материал: product red<br>
                     Уровень шума: 50 дБ<br>
                     Тип: однокамерный<br>
-                    </p>
+                </p>
+                <p><b>$1999.00</b></p>
+                <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                <p><b>$91.6/м. за 2 года</b></p>
+                <hr>
+                <p class="info">
+                    <b>Coal Trade In</b>
+                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                    заняться переработкой устройств<br><br>
+                </p>
                 <button class="button button4">Выбрать</button>
             </div>
             
@@ -72,8 +95,19 @@
                     Материал: нержавеющая сталь<br>
                     Цвет: стальной<br>
                     Уровень шума: 51 дБ<br>
-                    Тип: двухкамерный<br></p>
-                    <button class="button button4">Выбрать</button>
+                    Тип: двухкамерный<br>
+                </p>
+                <p><b>$2499.00</b></p>
+                <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                <p><b>$104.12/м. за 2 года</b></p>
+                <hr>
+                <p class="info">
+                    <b>Coal Trade In</b>
+                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                    заняться переработкой устройств<br><br>
+                </p>
+                <a href="DonbassPlus.html"><button class="button button4">Выбрать</button></a>
             </div>
             <div class="Span6 product_field" style="font-size: 80%;">
                 <p style="text-align: center;"><img src="images/Холодильник21.png" style="width: 80%;"></p>
@@ -85,8 +119,19 @@
                     Материал: сталь<br>
                     Цвет: стальной<br>
                     Уровень шума: 40 дБ<br>
-                    Тип: двухкамерный<br></p>
-                    <button class="button button4">Выбрать</button>
+                    Тип: двухкамерный<br>
+                </p>
+                <p><b>$1299.00</b></p>
+                <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                <p><b>$54.12/м. за 2 года</b></p>
+                <hr>
+                <p class="info">
+                    <b>Coal Trade In</b>
+                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                    заняться переработкой устройств<br><br>
+                </p>
+                <a href="DonbassMini.html"><button class="button button4">Выбрать</button></a>
             </div>
 
             <div class="Span12 product_field" style="text-align: center;">
@@ -104,9 +149,21 @@
                             Материал: сталь<br>
                             Цвет: стальной<br>
                             Уровень шума: 40 дБ<br>
-                            Тип: двухкамерный<br></p>
-                        <button class="button button4">Выбрать</button>
+                            Тип: двухкамерный<br>
+                        </p>
+                        <p><b>$1499.00</b></p>
+                        <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                        <p><b>$62.45/м. за 2 года</b></p>
+                        <hr>
+                        <p class="info">
+                            <b>Coal Trade In</b>
+                            <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                            Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                            заняться переработкой устройств<br><br>
+                        </p>
+                        <a href="DonbassSE.html"><button class="button button4">Выбрать</button></a>
                     </div>
+                    
                 </div>
             </div>
         </div>
