--- a/Donbass_Air.html
+++ b/Donbass_Air.html
@@ -5,6 +5,7 @@
         <meta charset="ASCII">
         <link rel="stylesheet" type="text/css" href="file.css">
     </head>
+
     <body>
         <header class="header">
             <nav class="navbar">
@@ -20,5 +21,108 @@
             </nav>
         </header>
         <hr>
+        <div class="main tablet_sale" style="padding-bottom: 5%;">
+            <div class="Span12" style="text-align: center;">
+                <h2>Выберете свой Donbass Air.</h2>
+            </div>
+            
+            <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
+                <p style="text-align: center;"><img src="images/air.png" style="width: 80%;"></p>
+                <button class="button-color" style="background-color: white;"></button>
+                <button class="button-color" style="background-color: red;"></button>
+                <button class="button-color" style="background-color: black;"></button>
+                <button class="button-color" style="background-color: blue;"></button>
+                <button class="button-color" style="background-color: pink;"></button>
+                <p>
+                    <br><b>DonBass Air</b><br><br>
+                    <b>120V<br>
+                    100 Вт<br>
+                    Air Flow<br>
+                    </b></p>
+                    <p style="font-size: 60%; color: rgb(92, 92, 92);">26" дюймовый стальной корпус<br>
+                    Материал: нержавеющая сталь<br>
+                    Цвет: белый<br>
+                    Уровень шума: 20 дБ<br>
+                    Тип: однокамерный<br>
+                    </p>
+                    <p><b>$800.00</b></p>
+                    <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                    <p><b>$66.6/м. за 1 год</b></p>
+                    <hr>
+                    <p class="info">
+                        <b>Coal Trade In</b>
+                        <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                        Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                        заняться переработкой устройств<br><br>
+                    </p>
+                    <a href="Donbass.html"><button class="button button4">Выбрать</button></a>
+            </div>
+
+            <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
+                <p style="text-align: center;"><img src="images/air.png" style="width: 80%;"></p>
+                <button class="button-color" style="background-color: white;"></button>
+                <button class="button-color" style="background-color: red;"></button>
+                <button class="button-color" style="background-color: black;"></button>
+                <button class="button-color" style="background-color: blue;"></button>
+                <button class="button-color" style="background-color: pink;"></button>
+                <p>
+                    <br><b>DonBass Air</b><br><br>
+                    <b>100V<br>
+                    90 Вт<br>
+                    Air Flow<br></b></p>
+                    <p style="font-size: 60%; color: rgb(92, 92, 92);">26" дюймовый стальной корпус<br>
+                    Материал: нержавеющая сталь<br>
+                    Цвет: белый<br>
+                    Уровень шума: 20 дБ<br>
+                    Тип: однокамерный<br>
+                    </p>
+                    <p><b>$800.00</b></p>
+                    <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
+                    <p><b>$66.6/м. за 1 год</b></p>
+                    <hr>
+                    <p class="info">
+                        <b>Coal Trade In</b>
+                        <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                        Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                        заняться переработкой устройств<br><br>
+                    </p>
+                    <a href="Donbass.html"><button class="button button4">Выбрать</button></a>
+            </div>
+        </div>
+
+
+        <footer>
+            <p> Стоимость обмена зависит от состояния, года выпуска и конфигурации вашего устройства, 
+                на которое распространяется действие программы обмена. Не на все устройства можно получить кредит. 
+                Вам должно быть не менее 18 лет, чтобы получить право на обмен в обмен на кредит или подарочную карту Coal. 
+                Компенсационная стоимость может быть использована при покупке нового устройства, отвечающего требованиям, или добавлена к подарочной карте Coal. 
+                Фактическая стоимость указана на основании получения устройства, соответствующего описанию, указанному при расчете. 
+                Налог с продаж может быть начислен на полную стоимость покупки нового устройства. 
+                Для обмена в магазине необходимо предъявить действительное удостоверение личности с фотографией (местное законодательство может требовать сохранения этой информации). 
+                Предложение может быть доступно не во всех магазинах и может отличаться в зависимости от того, осуществляется ли обмен в магазине или через Интернет. 
+                В некоторых магазинах могут быть установлены дополнительные требования. 
+                Coal или его партнеры по обмену оставляют за собой право отказать в любой сделке по обмену или ограничить ее количество по любой причине. 
+                Более подробную информацию о обмене и утилизации подходящих устройств можно получить у партнера Coal по обмену.
+                Могут применяться ограничения.<br><br>
+                Доступно в России на сайте coal.ru, в приложении Coal store и в магазинах Coal Store.
+                Чтобы получить доступ и использовать все функции и продукты DCard, доступные только пользователям DCard, 
+                вы должны добавить DCard в Wallet на сотовом телефоне. 
+                Карта DCard подлежит одобрению при оформлении, доступна только для квалифицированных заявителей в 
+                Российской Федерации и выпущена Центральным банком в Российской Федерации, филиалом в городе Воронеже.
+                <br><br>Узнайте больше о том, как оцениваются заявки на DCard, на сайте support.coal.ru/kb/HT209218.
+                Для DCloud+ требуется подписка.
+                </p>
+            <hr>
+            <div class="end">
+                <div><a href="magazin.html" style="color: black;">Магазин</a></div>
+                <div><a href="catalog.html" style="color: black;">Товары</a></div>
+                <div><a href="director.html" style="color: black;">Директор</a></div>
+                <div><a href="human.html" style="color: black;">Пользовательское соглашение</a></div>
+                <div><a href="" style="color: black;">Инструкции по эксплуатации</a></div>
+                <div><a href="https://www.apple.com/" target="_blank" style="color: black;">Спонсор</a></div>
+            </div>
+            <hr>
+            <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
+        </footer>
     </body>
 </html>
