--- a/catalog.html
+++ b/catalog.html
@@ -7,20 +7,16 @@
     <body>
         <header class="header root">
             <nav class="navbar">
-                <a href="index.html"><img src="images/CoalLogo.png" style="width: 25px"></a>
-                <a style="padding: 4px;">DonBass</a>
-                <a style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Товары</a>
-                <a href="magazin.html" style="padding: 4px">Магазин</a>
-                <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
+                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
+                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
             </nav>
         </header>
 
         <div class="main">
-            <div class="Span12 info">
-                <b>Если хотите сделать заказ, то напишите нам по этому поводу на 
-                    <a href="mailto:mdfd.all@gmail.com"><u>почту</u></a></b>
-            </div>
             
             <div class="Span4">
                 <br><br><br>
