--- a/DonbassAir.html
+++ b/DonbassAir.html
@@ -5,7 +5,6 @@
         <meta charset="ASCII">
         <link rel="stylesheet" type="text/css" href="file.css">
     </head>
-
     <body>
         <header class="header">
             <nav class="navbar">
@@ -21,76 +20,48 @@
             </nav>
         </header>
         <hr>
-        <div class="main tablet_sale" style="padding-bottom: 5%;">
-            <div class="Span12" style="text-align: center;">
-                <h2>Выберете свой Donbass Air.</h2>
-            </div>
-            
-            <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
-                <p style="text-align: center;"><img src="images/air.png" style="width: 80%;"></p>
-                <button class="button-color" style="background-color: white;"></button>
-                <button class="button-color" style="background-color: red;"></button>
-                <button class="button-color" style="background-color: black;"></button>
-                <button class="button-color" style="background-color: blue;"></button>
-                <button class="button-color" style="background-color: pink;"></button>
-                <p>
-                    <br><b>DonBass Air</b><br><br>
-                    <b>120V<br>
-                    100 Вт<br>
-                    Air Flow<br>
-                    </b></p>
-                    <p style="font-size: 60%; color: rgb(92, 92, 92);">26" дюймовый стальной корпус<br>
-                    Материал: нержавеющая сталь<br>
-                    Цвет: белый<br>
-                    Уровень шума: 20 дБ<br>
-                    Тип: однокамерный<br>
-                    </p>
-                    <p><b>$800.00</b></p>
-                    <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
-                    <p><b>$66.6/м. за 1 год</b></p>
-                    <hr>
-                    <p class="info">
-                        <b>Coal Trade In</b>
-                        <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
-                        Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
-                        заняться переработкой устройств<br><br>
-                    </p>
-                    <a href="DonbassAir.html"><button class="button button4">Выбрать</button></a>
-            </div>
 
-            <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
-                <p style="text-align: center;"><img src="images/air.png" style="width: 80%;"></p>
-                <button class="button-color" style="background-color: white;"></button>
-                <button class="button-color" style="background-color: red;"></button>
-                <button class="button-color" style="background-color: black;"></button>
-                <button class="button-color" style="background-color: blue;"></button>
-                <button class="button-color" style="background-color: pink;"></button>
-                <p>
-                    <br><b>DonBass Air</b><br><br>
-                    <b>100V<br>
-                    90 Вт<br>
-                    Air Flow<br></b></p>
-                    <p style="font-size: 60%; color: rgb(92, 92, 92);">26" дюймовый стальной корпус<br>
-                    Материал: сталь<br>
-                    Цвет: белый<br>
-                    Уровень шума: 20 дБ<br>
-                    Тип: однокамерный<br>
-                    </p>
-                    <p><b>$800.00</b></p>
-                    <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
-                    <p><b>$66.6/м. за 1 год</b></p>
-                    <hr>
-                    <p class="info">
-                        <b>Coal Trade In</b>
-                        <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
-                        Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
-                        заняться переработкой устройств<br><br>
-                    </p>
-                    <a href="DonbassAir.html"><button class="button button4">Выбрать</button></a>
+        <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
+            <div class="Span6" style="text-align: center;">
+                <img src="images/air.png" style="width: 100%;">
+            </div>
+            <div class="Span6" style="padding: 5%">
+                <p style="font-size: 100%;"><b>Кастомизируйте свой 26" дюймовый Donbass Air</b></p>
+                <p class="info">Система Air flow от компании Coal
+                <br>Материал основного корпуса: сталь
+                <br>Цвет: белый
+                <br>Уровень шума: 50 дБ
+                <br>Тип: однокамерный
+                <br>
+                <br>Дверца сделана по механизму - TM2009
+                <br><br>
+                <hr>
+                </p>
+
+                <p class="info">
+                    <b>Coal Trade In</b>
+                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                    заняться переработкой устройств<br><br>
+                </p>
+                <hr>
+
+                <p class="info">
+                    <b>Цвет:</b>
+                    <br><br>
+                    <button class="button-product" style="padding: 26px 44%;">Белый</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 43%;">Чёрный</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 45%;">Jet Black</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 43%;">Product Red</button>
+                </p>
             </div>
         </div>
-
-
         <footer>
             <p> Стоимость обмена зависит от состояния, года выпуска и конфигурации вашего устройства, 
                 на которое распространяется действие программы обмена. Не на все устройства можно получить кредит. 
@@ -124,5 +95,12 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
+        <div class="sale1">
+            <div class="sale">
+                <p style="text-align: end; font-size: 120%;"><b>$800.00 или
+                <br>$66.6/м. за 1 года</b></p>
+                <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
+            </div>
+        </div>
     </body>
 </html>
