--- a/magazin.html
+++ b/magazin.html
@@ -8,33 +8,35 @@
     <body>
         <header class="header root">
             <nav class="navbar">
-                <a href="index.html"><img src="images/CoalLogo.png" style="width: 25px"></a>
-                <a style="padding: 4px;">DonBass</a>
-                <a style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Товары</a>
-                <a href="magazin.html" style="padding: 4px">Магазин</a>
-                <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
+                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
+                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
             </nav>
         </header>
 
-        <div class="magazin-info">
-            <h1>Информация о магазние Donbass</h1>
-            <p>Donbass – один из лидеров рынка по продаже бытовой техники в России </p>
-            <p>Наша цель изменить жизнь людей, сделав простым доступ к огромному количеству качественных и недорогих товаров, предоставляя лучший сервис.
-                Наши клиенты – в центре всего, что мы делаем,
-                Доверие - главное. Мы строим долгосрочные отношения,
-                Во всём, чем занимаемся, стремимся быть экспертами,
-                Открыты для предложений и улучшений.<br>
-                Прозрачность - основа совместного бизнеса,
-                Работаем, соблюдая этику бизнеса,
-                Уважаем другие мнения и интересы,
-                Выполняем обязательства и берем ответственность за свои решения,
-                Нетерпимы к коррупции.<br>
-                Donbass - территория личной и коллективной самореализации,
-                Мы - одна команда,
-                Уважаем мнение и интересы людей,
-                Ценим свободу, смелость и ответственность.
-            </p>
+        <div class="main">
+            <div class="Span12" style="padding: 10%;">
+                <h1>Информация о магазние Donbass</h1>
+                <p>Donbass – один из лидеров рынка по продаже бытовой техники в России </p>
+                <p>Наша цель изменить жизнь людей, сделав простым доступ к огромному количеству качественных и недорогих товаров, предоставляя лучший сервис.
+                    Наши клиенты – в центре всего, что мы делаем,
+                    Доверие - главное. Мы строим долгосрочные отношения,
+                    Во всём, чем занимаемся, стремимся быть экспертами,
+                    Открыты для предложений и улучшений.<br>
+                    Прозрачность - основа совместного бизнеса,
+                    Работаем, соблюдая этику бизнеса,
+                    Уважаем другие мнения и интересы,
+                    Выполняем обязательства и берем ответственность за свои решения,
+                    Нетерпимы к коррупции.<br>
+                    Donbass - территория личной и коллективной самореализации,
+                    Мы - одна команда,
+                    Уважаем мнение и интересы людей,
+                    Ценим свободу, смелость и ответственность.
+                </p>
+            </div>
         </div>
 
         <footer>
