--- a/director.html
+++ b/director.html
@@ -8,15 +8,16 @@
     <body>
         <header class="header root">
             <nav class="navbar">
-                <a href="index.html"><img src="images/CoalLogo.png" style="width: 25px"></a>
-                <a style="padding: 4px;">DonBass</a>
-                <a style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Товары</a>
-                <a href="magazin.html" style="padding: 4px">Магазин</a>
-                <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
+                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
+                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
             </nav>
         </header>
-        <div class="main">
+        <div class="main" style="padding: 10%;">
+
             <div class="Span4">
                 <img src="images/me.jpg" width="340">
             </div>
