--- a/director.html
+++ b/director.html
@@ -16,10 +16,11 @@
                 <a href="director.html" style="padding: 4px; color: white;">Директор</a>
             </nav>
         </header>
+        <hr>
         <div class="main" style="padding: 10%;">
 
             <div class="Span4">
-                <img src="images/me.jpg" width="340">
+                <img src="images/me.jpg" style="width:340px; border-radius: 5%;">
             </div>
             <div class="Span8">
                 <p><b>Солодовников Владислав Александрович</b>
@@ -61,14 +62,15 @@
                 </p>
             <hr>
             <div class="end">
-                <div><a href="magazin.html">Магазин</a></div>
-                <div><a href="catalog.html">Товары</a></div>
-                <div><a href="director.html">Директор</a></div>
-                <div><a href="human.html">Пользовательское соглашение</a></div>
-                <div><a href="">Инструкции по эксплуатации</a></div>
-                <div><a href="https://www.apple.com/" target="_blank">Спонсор</a></div>
+                <div><a href="magazin.html" style="color: black;">Магазин</a></div>
+                <div><a href="catalog.html" style="color: black;">Товары</a></div>
+                <div><a href="director.html" style="color: black;">Директор</a></div>
+                <div><a href="human.html" style="color: black;">Пользовательское соглашение</a></div>
+                <div><a href="" style="color: black;">Инструкции по эксплуатации</a></div>
+                <div><a href="https://www.apple.com/" target="_blank" style="color: black;">Спонсор</a></div>
             </div>
             <hr>
+            <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
     </body>
 </html>
