--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         </div>
         <div class="main not-all">
             <div class="Span6 black" style="padding: 10%; text-align: center;">
-                <img src="images/Холодильник2.1.jpg" style="width: 70%;">
-                <div>
-                    <h2 style="color: white;"> DonBass X Plus </h2>
-                    <p style="color: white;"> Оптимальный. Семейный. Угодит своим функционалом кого угодно.</p>
-                    <a href="DonbassPlus.html"><button class="button button3">Купить</button></a>
-                </div>
+                <a href="DonbassPlus.html">
+                    <img src="images/Холодильник2.1.jpg" style="width: 70%;">
+                    <div>
+                        <h2 style="color: white;"> DonBass X Plus </h2>
+                        <p style="color: white;"> Оптимальный. Семейный. Угодит своим функционалом кого угодно.</p>
+                        <button class="button button3">Купить</button>
+                    </div>
+                </a>
                 <br>
             </div>
             <div class="Span6" style=" padding: 5%; text-align: center; background-color: rgb(233, 235, 235);">
@@ -64,11 +66,11 @@
             </div>
 
             <div class="Span6" style="padding: 10%; text-align: center; background-color: rgb(233, 235, 235);">
-                <img src="images/Холодильник2.png" style="width: 30%;">
+                <a href="DonbassMini.html"><img src="images/Холодильник2.png" style="width: 30%;">
                 <h2 style="color: black;">DonBass X mini</h2>
                 <p style="color: black;">Для тех, кто ценит компактность и полный профессионализм
                 </p>
-                <a href="DonbassMini.html"><button class="button button3">Купить</button></a>
+                <button class="button button3">Купить</button></a>
             </div>
             
             <div class="Span12" style="text-align: center; background-color: #ffffff;">
