--- a/magazin.html
+++ b/magazin.html
@@ -6,19 +6,20 @@
     </head>
 
     <body>
-        <header class="header root">
+        <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
-                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
-                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
-                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
-                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
+                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px;">Товары</a>
+                <a href="magazin.html" style="padding: 4px">Магазин</a>
+                <a href="director.html" style="padding: 4px">Директор</a>
             </nav>
         </header>
+        <hr>
 
         <div class="main">
-            <div class="Span12" style="padding: 10%;">
+            <div class="Span12" style="padding: 1%; padding-left: 20%; padding-right: 20%; font-size: 80%;">
                 <h1>Информация о магазние Donbass</h1>
                 <p>Donbass – один из лидеров рынка по продаже бытовой техники в России </p>
                 <p>Наша цель изменить жизнь людей, сделав простым доступ к огромному количеству качественных и недорогих товаров, предоставляя лучший сервис.
@@ -62,14 +63,15 @@
                 </p>
             <hr>
             <div class="end">
-                <div><a href="magazin.html">Магазин</a></div>
-                <div><a href="catalog.html">Товары</a></div>
-                <div><a href="director.html">Директор</a></div>
-                <div><a href="human.html">Пользовательское соглашение</a></div>
-                <div><a href="">Инструкции по эксплуатации</a></div>
-                <div><a href="https://www.apple.com/" target="_blank">Спонсор</a></div>
+                <div><a href="magazin.html" style="color: black;">Магазин</a></div>
+                <div><a href="catalog.html" style="color: black;">Товары</a></div>
+                <div><a href="director.html" style="color: black;">Директор</a></div>
+                <div><a href="human.html" style="color: black;">Пользовательское соглашение</a></div>
+                <div><a href="" style="color: black;">Инструкции по эксплуатации</a></div>
+                <div><a href="https://www.apple.com/" target="_blank" style="color: black;">Спонсор</a></div>
             </div>
             <hr>
+            <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
     </body>
 </html>
