--- a/catalog.html
+++ b/catalog.html
@@ -5,14 +5,14 @@
         <link rel="stylesheet" type="text/css" href="file.css">
     </head>
     <body>
-        <header class="header root">
+        <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
-                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
-                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
-                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
-                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
+                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px;">Товары</a>
+                <a href="magazin.html" style="padding: 4px">Магазин</a>
+                <a href="director.html" style="padding: 4px">Директор</a>
             </nav>
         </header>
 
