final css design

--- a/director.html
+++ b/director.html
@@ -11,7 +11,7 @@
                 <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
                 <a href="director.html" style="padding: 4px; color: white;">Директор</a>
             </nav>
@@ -29,7 +29,7 @@
                 <br>Информационная Безопасность
                 <br>Контакты:
                 <ul>
-                    <li>тел. 7(920) 406 53 07</li>
+                    <li>тел. +7 (920) 406-53-07</li>
                     <li>почта: mdfd.all@gmail.com</li>
                     <li>vk: <a href="https://vk.com/klematisy"
                                tagret="_blank">@klematisy</a></li>
