--- a/human.html
+++ b/human.html
@@ -10,7 +10,7 @@
                 <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Товары</a>
+                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
             </nav>
