--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px; color: white;">Товары</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
                 <a href="director.html" style="padding: 4px; color: white;">Директор</a>
             </nav>
