--- a/catalog.html
+++ b/catalog.html
@@ -10,14 +10,16 @@
                 <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Товары</a>
+                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
             </nav>
         </header>
 
         <div class="main">
-            <br><br><br><br><br>
+            <div class="Span12" style="padding-left: 20%; padding-right: 20%; font-size: 50%; padding-top: 5%; padding-bottom: 5%;">
+                <h1>По всем вопросам эксплуатации или каких-либо ошибок, связанных с неправильной работой устройств, писать нам на почту mdfd.all@gmail.com</h1>
+            </div>
         </div>
 
         <footer>
@@ -43,14 +45,15 @@
                 </p>
             <hr>
             <div class="end">
-                <div><a href="magazin.html">Магазин</a></div>
-                <div><a href="catalog.html">Товары</a></div>
-                <div><a href="director.html">Директор</a></div>
-                <div><a href="human.html">Пользовательское соглашение</a></div>
-                <div><a href="">Инструкции по эксплуатации</a></div>
-                <div><a href="https://www.apple.com/" target="_blank">Спонсор</a></div>
+                <div><a href="magazin.html" style="color: black;">Магазин</a></div>
+                <div><a href="catalog.html" style="color: black;">Товары</a></div>
+                <div><a href="director.html" style="color: black;">Директор</a></div>
+                <div><a href="human.html" style="color: black;">Пользовательское соглашение</a></div>
+                <div><a href="" style="color: black;">Инструкции по эксплуатации</a></div>
+                <div><a href="https://www.apple.com/" target="_blank" style="color: black;">Спонсор</a></div>
             </div>
             <hr>
+            <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
     </body>
 </html>
