--- a/Donbass.html
+++ b/Donbass.html
@@ -55,7 +55,7 @@
                     <button class="button-product" style="padding: 26px 43%;">Чёрный</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 45%;">Jet Black</button>
+                    <button class="button-product" style="padding: 26px 39%;">Космически чёрный</button>
                     <br>
                     <br>
                     <button class="button-product" style="padding: 26px 43%;">Product Red</button>
