--- a/DonbassAir.html
+++ b/DonbassAir.html
@@ -55,10 +55,16 @@
                     <button class="button-product" style="padding: 26px 43%;">Чёрный</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 45%;">Jet Black</button>
+                    <button class="button-product" style="padding: 26px 44%;">Синий</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 43%;">Product Red</button>
+                    <button class="button-product" style="padding: 26px 42%;">Розовый</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 42%;">Золотой</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 42%;">Product Red</button>
                 </p>
             </div>
         </div>
