--- a/Donbass_Air.html
+++ b/Donbass_Air.html
@@ -33,6 +33,7 @@
                 <button class="button-color" style="background-color: black;"></button>
                 <button class="button-color" style="background-color: blue;"></button>
                 <button class="button-color" style="background-color: pink;"></button>
+                <button class="button-color" style="background-color: rgb(203, 176, 118);"></button>
                 <p>
                     <br><b>DonBass Air</b><br><br>
                     <b>120V<br>
