--- a/magazin.html
+++ b/magazin.html
@@ -21,21 +21,21 @@
         <div class="main">
             <div class="Span12" style="padding: 1%; padding-left: 20%; padding-right: 20%; font-size: 80%;">
                 <h1>Информация о магазние Donbass</h1>
-                <p>Donbass – один из лидеров рынка по продаже бытовой техники в России </p>
+                <p>Donbass – один из лидеров рынка по продаже бытовой техники в России. </p>
                 <p>Наша цель изменить жизнь людей, сделав простым доступ к огромному количеству качественных и недорогих товаров, предоставляя лучший сервис.
-                    Наши клиенты – в центре всего, что мы делаем,
-                    Доверие - главное. Мы строим долгосрочные отношения,
-                    Во всём, чем занимаемся, стремимся быть экспертами,
+                    Наши клиенты – в центре всего, что мы делаем.
+                    Доверие - главное. Мы строим долгосрочные отношения.
+                    Во всём, чем занимаемся, стремимся быть экспертами.
                     Открыты для предложений и улучшений.<br>
-                    Прозрачность - основа совместного бизнеса,
+                    Прозрачность - основа совместного бизнеса.
                     Работаем, соблюдая этику бизнеса,
-                    Уважаем другие мнения и интересы,
-                    Выполняем обязательства и берем ответственность за свои решения,
-                    Нетерпимы к коррупции.<br>
-                    Donbass - территория личной и коллективной самореализации,
+                    уважаем другие мнения и интересы.
+                    Выполняем обязательства и берем ответственность за свои решения и
+                    нетерпимы к коррупции.<br>
+                    Coal - территория личной и коллективной самореализации,
                     Мы - одна команда,
-                    Уважаем мнение и интересы людей,
-                    Ценим свободу, смелость и ответственность.
+                    уважаем мнение и интересы людей,
+                    ценим свободу, смелость и ответственность.
                 </p>
             </div>
         </div>
