--- a/catalog.html
+++ b/catalog.html
@@ -14,6 +14,10 @@
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
             </nav>
+            <nav class="navbar-under">
+                <b>Поддержка</b>
+            </nav>
+            <hr>
         </header>
 
         <div class="main">
