--- a/Donbass_X.html
+++ b/Donbass_X.html
@@ -27,10 +27,10 @@
             </div>
 
             <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
-                <p style="text-align: center;"><img src="images/DonbassXFridge.png" style="width: 80%;"></p>
-                <button class="button-color" style="background-color: white;"></button>
-                <button class="button-color" style="background-color: black;"></button>
-                <button class="button-color" style="background-color: grey;"></button>
+                <p style="text-align: center;"><img id="donbassX" src="images/DonbassXFridge.png" style="width: 80%;"></p>
+                <button class="button-color" style="background-color: white;" id="whiteX"></button>
+                <button class="button-color" style="background-color: black;" id="spaceX"></button>
+                <button class="button-color" style="background-color: grey;" id="blackX"></button>
                 <p><img src="images/Xamarin.png" style="width: 30%;">
                 <br><b>DonBass X</b><br><br>
                 <b>240V<br>
@@ -200,5 +200,6 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
+        <script src="nodes.js"></script>
     </body>
 </html>
