--- a/Donbass.html
+++ b/Donbass.html
@@ -23,7 +23,7 @@
 
         <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
             <div class="Span6" style="text-align: center;">
-                <img src="images/DonbassXFridge.png" style="width: 100%;">
+                <img src="images/DonbassXFridge.png" style="width: 100%;" id="donbassX">
             </div>
             <div class="Span6" style="padding: 5%">
                 <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass X</b></p>
@@ -49,16 +49,13 @@
                 <p class="info">
                     <b>Цвет:</b>
                     <br><br>
-                    <button class="button-product" style="padding: 26px 44%;">Белый</button>
+                    <button class="button-product" style="padding: 26px 44%;" id="whiteX">Белый</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 43%;">Чёрный</button>
+                    <button class="button-product" style="padding: 26px 43%;" id="blackX">Чёрный</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 39%;">Космически чёрный</button>
-                    <br>
-                    <br>
-                    <button class="button-product" style="padding: 26px 43%;">Product Red</button>
+                    <button class="button-product" style="padding: 26px 39%;" id="spaceX">Космически чёрный</button>
                 </p>
             </div>
         </div>
@@ -103,4 +100,5 @@
             </div>
         </div>
     </body>
+    <script src="nodes.js"></script>
 </html>
