--- a/Donbass_X.html
+++ b/Donbass_X.html
@@ -79,7 +79,7 @@
                     Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
                     заняться переработкой устройств<br><br>
                 </p>
-                <button class="button button4">Выбрать</button>
+                <a href="DonbassPR.html"><button class="button button4">Выбрать</button></a>
             </div>
             
             <div class="Span6 product_field" style="font-size: 80%;">
