--- a/DonbassAir.html
+++ b/DonbassAir.html
@@ -23,7 +23,7 @@
 
         <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
             <div class="Span6" style="text-align: center;">
-                <img src="images/air.png" style="width: 100%;">
+                <img src="images/Air/air.png" style="width: 100%;" id="donbassAir1">
             </div>
             <div class="Span6" style="padding: 5%">
                 <p style="font-size: 100%;"><b>Кастомизируйте свой 26" дюймовый Donbass Air</b></p>
@@ -49,23 +49,22 @@
                 <p class="info">
                     <b>Цвет:</b>
                     <br><br>
-                    <button class="button-product" style="padding: 26px 44%;">Белый</button>
+                    <button class="button-product" style="padding: 26px 44%;" id="whiteAir1">Белый</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 43%;">Чёрный</button>
+                    <button class="button-product" style="padding: 26px 42%;" id="pinkAir1">Розовый</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 44%;">Синий</button>
+                    <button class="button-product" style="padding: 26px 42%;" id="goldenAir1">Золотой</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 42%;">Розовый</button>
+                    <button class="button-product" style="padding: 26px 42%;" id="redAir1">Product Red</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 42%;">Золотой</button>
-                    <br>
-                    <br>
-                    <button class="button-product" style="padding: 26px 42%;">Product Red</button>
+                    <button class="button-product" style="padding: 26px 43%;" id="blackAir1">Чёрный</button>
                 </p>
+                <script src="buttns.js"></script>
+                <script src="Airnode.js"></script>
             </div>
         </div>
         <footer>
