--- a/DonbassPlus.html
+++ b/DonbassPlus.html
@@ -49,17 +49,25 @@
                 <p class="info">
                     <b>Комплектация:</b>
                     <br><br>
-                    <button class="button-product" style="padding: 26px 39%;">Улучшенные радиаторы</button>
+                    <button id="radiator" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Улучшенные радиаторы</p>
+                        <p style="text-align: end; align-self: center;"> + $200.00</p>
+                    </button>
                     <br>
+                    <button id="cabble" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Удлинённый кабель питания</p>
+                        <p style="text-align: end; align-self: center;"> + $50.00</p></button>
                     <br>
-                    <button class="button-product" style="padding: 26px 39%;">Удлинённый кабель питания</button>
+                    <button id="shelves" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Две дополнительные полочки</p>
+                        <p style="text-align: end; align-self: center;"> + $300.00</p></button>
                     <br>
-                    <br>
-                    <button class="button-product" style="padding: 26px 35%;">Две дополнительные полочки</button>
-                    <br>
-                    <br>
-                    <button class="button-product" style="padding: 26px 35%;">Дополнительная калибровка компрессора</button>
+                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
+                        <p style="text-align: end; align-self: center;"> + $500.00</p>
+                    </button>
                 </p>
+                <script src="DonbassPlus.js"></script>
             </div>
         </div>
         <footer>
