--- a/DonbassSE.html
+++ b/DonbassSE.html
@@ -49,11 +49,17 @@
                 <p class="info">
                     <b>Комплектация:</b>
                     <br><br>
-                    <button class="button-product" style="padding: 26px 43%;">Полочки типа Fashion</button>
+                    <button id="fashion" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Полочки типа Fashion</p>
+                        <p style="text-align: end; align-self: center;"> + $800.00</p>
+                    </button>
                     <br>
-                    <br>
-                    <button class="button-product" style="padding: 26px 39%;">Калибровка компрессора</button>
+                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
+                        <p style="text-align: end; align-self: center;"> + $500.00</p>
+                    </button>
                 </p>
+                <script src="DonbassSE.js"></script>
             </div>
         </div>
         <footer>
