--- a/DonbassMini.html
+++ b/DonbassMini.html
@@ -49,11 +49,17 @@
                 <p class="info">
                     <b>Комплектация:</b>
                     <br><br>
-                    <button class="button-product" style="padding: 26px 39%;">Удлинённый кабель питания</button>
+                    <button id="cabble" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Удлинённый кабель питания</p>
+                        <p style="text-align: end; align-self: center;"> + $50.00</p>
+                    </button>
                     <br>
-                    <br>
-                    <button class="button-product" style="padding: 26px 39%;">Калибровка компрессора</button>
+                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
+                        <p style="text-align: end; align-self: center;"> + $500.00</p>
+                    </button>
                 </p>
+                <script src="DonbassMini.js"></script>
             </div>
         </div>
         <footer>
